[DAQ-4311] some modernization and cleanup in i20_1 gda.scan package
Use pattern matching instanceof where possible
Use method references instead of lambdas in streams where possible
Return values immediately instead of returned variable assigned on previous line
Fix logging messages to use formatting instead of string concatenization
Use collection.isEmpty() instead of size() where possible

Change-Id: I83bd842132cf54d6396d1999e61f38278c48664d